--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -550,6 +550,10 @@
     "loading": "Loading results…",
     "noResults": "No recipes found for \"{{query}}\".",
     "filters": "Filters",
+    "sortRelevance": "Relevance",
+    "sortTimeAsc": "Fastest",
+    "sortTimeDesc": "Longest",
+    "sortDifficulty": "Easiest first",
     "dietaryRestrictions": "Dietary Restrictions",
     "cuisines": "Cuisines",
     "maxCookTime": "Max Cooking Time",
