Localize add-task capture flow

--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -699,5 +699,63 @@
       "iconSize": "Icon Size",
       "iconSizeDescription": "Adjust the size of navigation icons"
     }
+  },
+  "inventoryCapture": {
+    "title": "Update Inventory",
+    "cancel": "Cancel",
+    "captureHeading": "Capture an update",
+    "captureDescription": "Pick how you want to log your groceries. Toggle between camera, voice, or text to capture receipts, talk through your haul, or jot down what you picked up.",
+    "modeCameraLabel": "Camera",
+    "modeCameraDescription": "Scan receipts or product labels",
+    "modeVoiceLabel": "Voice",
+    "modeVoiceDescription": "Speak your updates naturally",
+    "modeTextLabel": "Text",
+    "modeTextDescription": "Type your updates manually",
+    "cameraSectionLabel": "Scan receipts or products",
+    "cameraSectionDescription": "Snap receipts or product labels and we’ll prepare the data for inventory updates.",
+    "openCamera": "Open camera",
+    "cameraPermissionDenied": "We need access to your camera to scan receipts or groceries.",
+    "cameraPermissionRequired": "Camera permission is required to scan receipts or products.",
+    "cameraModuleMissing": "Camera feature requires rebuilding the app. Please rebuild with: npx expo run:ios",
+    "cameraOpenError": "We couldn’t open the camera. Please try again.",
+    "capturedImages": "Captured images ({{count}})",
+    "noCapturedImages": "You haven’t added any photos yet. Take a picture of your receipt or the front of the package to capture details.",
+    "voiceSectionLabel": "Capture by voice",
+    "voiceSectionDescription": "Speak naturally about what you bought or used up. You’ll see the transcript update live as we listen.",
+    "startRecording": "Start recording",
+    "stopAndProcess": "Stop & process",
+    "clearRecording": "Clear recording",
+    "textSectionLabel": "Write down what you bought",
+    "textSectionDescription": "Add quick notes about items or quantities. We’ll merge these with anything you say or scan.",
+    "textPlaceholder": "Example: 2 cartons of eggs, 1 bag of rice",
+    "transcriptNotesLabel": "Transcript & notes",
+    "liveTranscriptLabel": "Live transcript",
+    "liveTranscriptPlaceholder": "Your words will appear here.",
+    "typedNotesLabel": "Typed notes",
+    "processData": "Process data",
+    "processing": "Processing...",
+    "suggestedUpdates": "Suggested updates",
+    "codeLabel": "Code: {{code}}",
+    "varietyLabel": "Variety: {{variety}}",
+    "quantityLabel": "Quantity: {{quantity}}",
+    "noteLabel": "Note: {{note}}",
+    "applyInventoryUpdates": "Apply inventory updates",
+    "saving": "Saving...",
+    "speechNotConfigured": "Speech recognition is not configured in this build.",
+    "speechPermissionsRequired": "Speech permissions are required to capture inventory updates.",
+    "speechNotAvailable": "Speech recognition is not available on this device.",
+    "speechStartError": "Unable to start speech recognition. Please try again.",
+    "speechGenericError": "Speech recognition encountered an error. Please try again.",
+    "speechErrorWithType": "Speech recognition error: {{type}}",
+    "addInputBeforeProcess": "Add a recording, a note, or a photo before processing your update.",
+    "noMatchesError": "We couldn’t match any inventory items. Try adding more detail to your capture.",
+    "processingError": "We ran into a problem understanding that update. Please try again.",
+    "noSuggestionsError": "Generate inventory suggestions before applying updates.",
+    "applyError": "We couldn’t update your inventory. Please try again.",
+    "noTranscriptAvailable": "No transcript available",
+    "cameraNotesPrompt": "Try snapping a clear photo of your receipt or product label.",
+    "textNotesPrompt": "Add a quick note about what you bought.",
+    "scannedReceiptPhotos": "Scanned {{count}} receipt photo(s).",
+    "scannedGroceryImages": "Scanned grocery images."
   }
 }
