Add voice inventory edits and brand catalog

--- a/i18n/locales/fr.json
+++ b/i18n/locales/fr.json
@@ -772,6 +772,16 @@
     "processData": "Process data",
     "processing": "Processing...",
     "suggestedUpdates": "Suggested updates",
+    "editOperationLabel": "Update type",
+    "operationAdd": "Add",
+    "operationDecrement": "Decrement",
+    "operationRemove": "Remove",
+    "editQuantityLabel": "Quantity",
+    "editVarietyLabel": "Variety",
+    "varietyNone": "No variety",
+    "editNoteLabel": "Note",
+    "editNotePlaceholder": "Add an optional note",
+    "removeAllHint": "This will remove the item entirely.",
     "codeLabel": "Code: {{code}}",
     "varietyLabel": "Variety: {{variety}}",
     "quantityLabel": "Quantity: {{quantity}}",
