--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -351,7 +351,31 @@
     "webPreviewHeader": "From the web",
     "webPreviewSubheader": "Tap to explore recipe inspiration across the web.",
     "webPreviewLoading": "Loading preview…",
-    "webPreviewUnavailable": "Preview not available"
+    "webPreviewUnavailable": "Preview not available",
+    "openInBrowser": "Open in Browser"
+  },
+  "qrScanner": {
+    "title": "QR scanner",
+    "permissionTitle": "Enable camera & location",
+    "permissionCopy": "We need both permissions to keep the camera running and confirm that devices are in the same place when scanning.",
+    "permissionButton": "Grant permissions",
+    "headline": "Scan to verify together",
+    "statusPaired": "Both devices confirmed at the same place.",
+    "statusWaiting": "Waiting for another phone to scan this QR nearby.",
+    "statusProcessing": "Processing scan...",
+    "statusIdle": "Hold the QR code inside the frame to start.",
+    "cameraRequired": "Enable camera access to scan codes.",
+    "permissionsRequired": "Camera and location access are required to start scanning.",
+    "locationRequired": "Location access is needed to validate proximity.",
+    "framePrompt": "Place the QR in view",
+    "lastScannedLabel": "Last scanned",
+    "noScansYet": "No scans yet",
+    "pairedStatus": "Paired with a nearby device",
+    "awaitingMatch": "Awaiting a matching scan",
+    "proximityMeters": "~{{distance}} m apart",
+    "resetting": "Resetting...",
+    "scanAnother": "Scan another code",
+    "errorProcessing": "Unable to process scan."
   },
   "kitchen": {
     "title": "Kitchen",
@@ -416,6 +440,30 @@
     "errorLoadProfile": "We couldn't load your profile details. Please try again shortly.",
     "language": "Language",
     "languageDesc": "Choose your preferred app language. Content updates instantly.",
+    "privacyTitle": "Privacy",
+    "privacyDesc": "Control how analytics are collected on this device.",
+    "analyticsToggleLabel": "Allow analytics",
+    "analyticsToggleDesc": "Share usage data to help improve Haricot. No analytics run until you opt in.",
+    "sessionReplayToggleLabel": "Allow session replay",
+    "sessionReplayToggleDesc": "Share in-app screen recordings for debugging. Requires analytics.",
+    "savingPrivacy": "Saving privacy preferences…",
+    "errorSavePrivacy": "We couldn't save your privacy preferences. Please try again.",
+    "dsarTitle": "Your data",
+    "dsarDesc": "Export a copy of your data or delete your account.",
+    "dsarExport": "Export my data",
+    "dsarExporting": "Exporting...",
+    "dsarDelete": "Delete my account",
+    "dsarDeleting": "Deleting...",
+    "dsarExportSuccessTitle": "Export ready",
+    "dsarExportSuccessMessage": "Your data was copied to the clipboard. A download will start on web when available.",
+    "dsarExportErrorTitle": "Export failed",
+    "dsarExportErrorMessage": "We couldn't export your data. Please try again.",
+    "dsarDeleteConfirmTitle": "Delete account",
+    "dsarDeleteConfirmMessage": "This will permanently delete your account and personal data. This action can't be undone.",
+    "dsarDeleteSuccessTitle": "Account deleted",
+    "dsarDeleteSuccessMessage": "Your account has been deleted.",
+    "dsarDeleteErrorTitle": "Delete failed",
+    "dsarDeleteErrorMessage": "We couldn't delete your account. Please try again.",
     "nutritionTitle": "Nutrition goals",
     "nutritionDesc": "Set your intent now and adjust targets later as you learn what works.",
     "nutritionStarter": "Starter profile",
@@ -439,6 +487,8 @@
     "titlePlaceholder": "Enter task title",
     "description": "Description *",
     "descriptionPlaceholder": "Enter task description",
+    "titleLabel": "Title",
+    "descriptionLabel": "Description",
     "error": "Error",
     "errorTitle": "Please enter a task title",
     "errorDescription": "Please enter a task description",
