--- a/i18n/locales/fr.json
+++ b/i18n/locales/fr.json
@@ -351,7 +351,31 @@
     "webPreviewHeader": "Depuis le web",
     "webPreviewSubheader": "Touchez pour explorer l'inspiration culinaire sur le web.",
     "webPreviewLoading": "Chargement de l’aperçu…",
-    "webPreviewUnavailable": "Aperçu non disponible"
+    "webPreviewUnavailable": "Aperçu non disponible",
+    "openInBrowser": "Ouvrir dans le navigateur"
+  },
+  "qrScanner": {
+    "title": "Scanner QR",
+    "permissionTitle": "Activer la caméra et la localisation",
+    "permissionCopy": "Nous avons besoin des deux autorisations pour garder la caméra active et confirmer que les appareils sont au même endroit lors du scan.",
+    "permissionButton": "Autoriser",
+    "headline": "Scanner pour vérifier ensemble",
+    "statusPaired": "Les deux appareils sont confirmés au même endroit.",
+    "statusWaiting": "En attente d'un autre téléphone pour scanner ce QR à proximité.",
+    "statusProcessing": "Traitement du scan...",
+    "statusIdle": "Placez le QR dans le cadre pour commencer.",
+    "cameraRequired": "Activez l'accès à la caméra pour scanner des codes.",
+    "permissionsRequired": "L'accès à la caméra et à la localisation est requis pour commencer le scan.",
+    "locationRequired": "L'accès à la localisation est nécessaire pour valider la proximité.",
+    "framePrompt": "Placez le QR dans le cadre",
+    "lastScannedLabel": "Dernier scan",
+    "noScansYet": "Aucun scan pour l'instant",
+    "pairedStatus": "Appairé avec un appareil à proximité",
+    "awaitingMatch": "En attente d'un scan correspondant",
+    "proximityMeters": "~{{distance}} m d'écart",
+    "resetting": "Réinitialisation...",
+    "scanAnother": "Scanner un autre code",
+    "errorProcessing": "Impossible de traiter le scan."
   },
   "kitchen": {
     "title": "Cuisine",
@@ -414,6 +438,30 @@
     "errorLoadProfile": "Nous n'avons pas pu charger les détails de votre profil. Veuillez réessayer sous peu.",
     "language": "Langue",
     "languageDesc": "Choisissez la langue de l’application. Le contenu se met à jour instantanément.",
+    "privacyTitle": "Confidentialité",
+    "privacyDesc": "Contrôlez la collecte d'analytique sur cet appareil.",
+    "analyticsToggleLabel": "Autoriser l'analytique",
+    "analyticsToggleDesc": "Partager des données d'usage pour améliorer Haricot. Aucune analytique ne s'exécute sans votre accord.",
+    "sessionReplayToggleLabel": "Autoriser la relecture de session",
+    "sessionReplayToggleDesc": "Partager des enregistrements d'écran in-app pour le débogage. Nécessite l'analytique.",
+    "savingPrivacy": "Enregistrement des préférences de confidentialité…",
+    "errorSavePrivacy": "Impossible d'enregistrer vos préférences de confidentialité. Veuillez réessayer.",
+    "dsarTitle": "Vos données",
+    "dsarDesc": "Exportez une copie de vos données ou supprimez votre compte.",
+    "dsarExport": "Exporter mes données",
+    "dsarExporting": "Exportation...",
+    "dsarDelete": "Supprimer mon compte",
+    "dsarDeleting": "Suppression...",
+    "dsarExportSuccessTitle": "Export prêt",
+    "dsarExportSuccessMessage": "Vos données ont été copiées dans le presse-papiers. Un téléchargement démarrera sur le web si possible.",
+    "dsarExportErrorTitle": "Échec de l’exportation",
+    "dsarExportErrorMessage": "Nous n'avons pas pu exporter vos données. Veuillez réessayer.",
+    "dsarDeleteConfirmTitle": "Supprimer le compte",
+    "dsarDeleteConfirmMessage": "Cela supprimera définitivement votre compte et vos données personnelles. Cette action est irréversible.",
+    "dsarDeleteSuccessTitle": "Compte supprimé",
+    "dsarDeleteSuccessMessage": "Votre compte a été supprimé.",
+    "dsarDeleteErrorTitle": "Échec de la suppression",
+    "dsarDeleteErrorMessage": "Nous n'avons pas pu supprimer votre compte. Veuillez réessayer.",
     "nutritionTitle": "Nutrition goals",
     "nutritionDesc": "Set your intent now and adjust targets later as you learn what works.",
     "nutritionStarter": "Starter profile",
@@ -437,6 +485,8 @@
     "titlePlaceholder": "Entrez le titre de la tâche",
     "description": "Description *",
     "descriptionPlaceholder": "Entrez la description de la tâche",
+    "titleLabel": "Titre",
+    "descriptionLabel": "Description",
     "error": "Erreur",
     "errorTitle": "Veuillez entrer un titre de tâche",
     "errorDescription": "Veuillez entrer une description de tâche",
